@startuml Detailed_Class_Structure
!theme plain
skinparam backgroundColor #FEFEFE
skinparam classBackgroundColor #E1D5E7
skinparam classBorderColor #9673A6

package "Controllers" {
  class AgentController {
    - _aiService: ILocalAIService
    - _mcpClient: IMcpClient
    - _logger: ILogger<AgentController>
    - _searcher: PromptSearcher
    - _pageFetcher: WebPageFetcher
    - _context: MyDbContext
    - _toolOrchestrator: IToolOrchestrator
    --
    + Chat(request): Task<ActionResult<AgentResponse>>
    + GetAvailableTools(): Task<ActionResult<List<FunctionTool>>>
    + Health(): IActionResult
    - EnhanceQueryWithThemes(query): string
    - CreateLocalTool(...): FunctionTool
    - LogToolCallAsync(...): Task
  }
}

package "Services" {
  interface IToolOrchestrator <<interface>> {
    + ExecuteToolAsync(toolName, args): Task<ToolExecutionResult>
    + ExtractToolCalls(content, tools): List<(string, Dictionary)>
    + IsParameterlessFunction(functionName): bool
  }

  class ToolOrchestrator {
    - _mcpClient: IMcpClient
    - _searcher: PromptSearcher
    - _pageFetcher: WebPageFetcher
    - _toolCallExtractor: IToolCallExtractor
    - _logger: ILogger<ToolOrchestrator>
    --
    + ExecuteToolAsync(toolName, args): Task<ToolExecutionResult>
    + ExtractToolCalls(content, tools): List<(string, Dictionary)>
    + IsParameterlessFunction(functionName): bool
    - HandleWebSearchAsync(args): Task<string>
    - HandleFetchPageAsync(args): Task<string>
  }

  interface IToolCallExtractor <<interface>> {
    + ExtractToolCalls(content, tools): List<(string, Dictionary)>
    + IsParameterlessFunction(functionName): bool
  }

  class ToolCallExtractor {
    - _logger: ILogger<ToolCallExtractor>
    --
    + ExtractToolCalls(content, tools): List<(string, Dictionary)>
    + IsParameterlessFunction(functionName): bool
    - ExtractActionFormatToolCalls(content): List
    - ExtractJsonFormatToolCalls(content): List
    - ExtractJsonParameters(root): Dictionary<string, object>
  }

  class ToolExecutionResult {
    + FunctionName: string
    + Parameters: Dictionary<string, object>
    + Success: bool
    + Result: string
    + ErrorMessage: string
    + ExecutedAt: DateTime
  }
}

' Relationships
AgentController --> IToolOrchestrator : uses
ToolOrchestrator ..|> IToolOrchestrator : implements
ToolOrchestrator --> IToolCallExtractor : uses
ToolCallExtractor ..|> IToolCallExtractor : implements
ToolOrchestrator --> ToolExecutionResult : returns
ToolOrchestrator --> IMcpClient : routes
ToolOrchestrator --> PromptSearcher : uses
ToolOrchestrator --> WebPageFetcher : uses
ToolCallExtractor --> "returns" List

@enduml
